*Empty MediaWiki Message*

--- a/Xasan_Abtidoon.mw
+++ b/Xasan_Abtidoon.mw
@@ -1,5 +1,5 @@
 {| class="infobox" align="right" style="font-size: 95%; text-align: left;"colspan="2" style="font-size: smaller;  text-align: center;" {{!}} [[File:|200px]]{{{caption|}}}}}
-| colspan="2" style="font-size: larger; text-align: center;" | '''Xasan Guuleed Abtidoon'''</br>'''حسن جوليد أبتيدون'''</br>
+| colspan="2" style="font-size: larger; text-align: center;" | '''Xasan Abtidoon'''</br>'''حسن جوليد أبتيدون'''</br>
 [[File:Hassan Gouled Aptidon in 26 June 1977.jpg|250px]]
 |-
 ! colspan="2" style="background-color: #cae1ff; text-align: center;" |  '''Madaxwaynihii 1aad ee Jamhuuriyadda Jabuuti'''
@@ -39,7 +39,7 @@
 | [[Xisbiga talada ee dalka jabuuti RPP|Xisbiga Talada ee Dalka Jabuuti]](RPP)
 |-
 |}
-'''Xasan Guuleed Abtidoon''' wuxuu ahaa Madaxweynihii koowaad ee [[Jabuuti|Jamhuuriyadda Jabuuti]] kaasi oo xilka hayay 27dii Juun 1977 ilaa 8dii Maajo, 1999.
+'''Xasan Abtidoon''' wuxuu ahaa Madaxweynihii koowaad ee [[Jabuuti|Jamhuuriyadda Jabuuti]] kaasi oo xilka hayay 27dii Juun 1977 ilaa 8dii Maajo, 1999.
 
 == Taariikhda ==
 Wuxuu ku dhashay tuulo yar oo la yiraahdo Gaarisa oo ku taal degmada Lughaya ee waqooyiga [[Soomaaliya]].
