*Empty MediaWiki Message*

--- a/Maxmuud_Sangub.mw
+++ b/Maxmuud_Sangub.mw
@@ -1,6 +1,6 @@
    Sangub
 # 
-* '''Maxmuud Cabdilaahi Ciise(Sangub)''' Waa abwaan Soomaliyeed oo aad iyo aad u caana.
+* '''Maxmuud Sangub''' Waa abwaan Soomaliyeed oo aad iyo aad u caana.
 Waa abwaan soomaaliyeed oo leh halabuur dhinacyo badan leh.
 Taariikh-Faneedka Abwaan Maxamuud C/laahi Ciise “Sangub”
 Maxamuud Cabdilaahi Ciise (Sangub), wuxuu ka mid yahay abwaanada ugu horeeya hal-abuurka Soomaalida, waana nin dad badani ku xusuustaan kaalinta uu ka qaatay Kobcinta Suugaanta Soomaaliyeed, hase yeeshee, waxaa dhici karta in dad badan oo maanta nooli aanay isu aqoon Sangub iyo Fankiisa. Bal aanu isku dayno in aynu Wax ka sheegno, taariikh-faneedka Sangub:
