--- a/Maxamed_Mooge.mw
+++ b/Maxamed_Mooge.mw
@@ -77,7 +77,7 @@
 | signature_size     = 
 | footnotes          = Maxamed Mooge iyo walaalkiis Axmed Mooge waxay ka mid ahaayeen [[Fanaan Soomaali|fanaaniinta Soomaalida]] ee ugu caansana wakhtigoodi, waxaana aad loogu xasuustaa heesaha lidka ku ahaa [[dowlad]]ii [[Maxamed Siyaad Barre]]. 
 }}
-'''Maxamed Mooge Liibaan''' ({{lang-en|''Mohammed Mooge Liibaan''}}, {{lang-ar|محمد الموجي لبنان}}) (geeriyooday Juun 1984) wuxuu ahaa [[fanaan]], [[kaban]]yahan, [[Hees]]a, [[halabuur]], [[laxan]]miiste, [[abwaan]], [[muusig]]yahan iyo [[siyaasad|siyaasi]] u dhaqdhaqaaqa arimaha bulshada ku dhaqan [[Waqooyiga Soomaaliya]], maanta loo yaqaano [[Somaliland]]. Fannaan Maxamed Mooge iyo walaalkiis [[Axmed Mooge Liibaan]] waxay ka mid ahaayeen hobollada ugu caansan ee heesaha fanka Soomaalida, Sidoo kale waxaa Maxamed lagu yaqaanay heeso gubaabo iyo dhaqdhaqaaq lid ku ah dowladii kalitaliska ahayda ee [[Soomaaliya]]. 
+'''Maxamed Mooge ''' ({{lang-en|''Mohammed Mooge Liibaan''}}, {{lang-ar|محمد الموجي لبنان}}) (geeriyooday Juun 1984) wuxuu ahaa [[fanaan]], [[kaban]]yahan, [[Hees]]a, [[halabuur]], [[laxan]]miiste, [[abwaan]], [[muusig]]yahan iyo [[siyaasad|siyaasi]] u dhaqdhaqaaqa arimaha bulshada ku dhaqan [[Waqooyiga Soomaaliya]], maanta loo yaqaano [[Somaliland]]. Fannaan Maxamed Mooge iyo walaalkiis [[Axmed Mooge Liibaan]] waxay ka mid ahaayeen hobollada ugu caansan ee heesaha fanka Soomaalida, Sidoo kale waxaa Maxamed lagu yaqaanay heeso gubaabo iyo dhaqdhaqaaq lid ku ah dowladii kalitaliska ahayda ee [[Soomaaliya]]. 
 Maxamed Mooge, Eebbe ha u naxariistee waxa sannadkii 1984 tii lagu dilay duleedka degmada Awaare ee maamulka Soomaalida ee Itoobbiya.
 
 =Taariikh=
