*Empty MediaWiki Message*

--- a/Selena_Gomez.mw
+++ b/Selena_Gomez.mw
@@ -2,46 +2,51 @@
 {| class="infobox biography vcard" style="width:22em"
 ! colspan="2" style="text-align:center;font-size:125%;font-weight:bold" |<span class="fn">Selena Gomez</span>
 |-
-| colspan="2" style="text-align:center" |[[File:191125 Selena Gomez at the 2019 American Music Awards (cropped).png|alt=|frameless]]
+| colspan="2" style="text-align:center" |[[File:191125_Selena_Gomez_at_the_2019_American_Music_Awards_(cropped).png|alt=Gomez stands in a lime green dress against a purple backdrop|frameless]]<div>Gomez 2019</div>
 |-
 ! scope="row" |Dhalasho
-|<span class="nickname">Selena Marie Gomez</span><span style="display:none"> (<span class="bday">1992-07-22</span>) </span>Luuliyo 22, 1992<span class="noprint ForceAgeToShow"> (Waa&nbsp;27jir)</span>
-<span class="birthplace">[[Grand Prairie]], [[Texas]], [[Maraykanka|US]]</span>
+|<span class="nickname">Selena Marie Gomez</span><span style="display:none"> (<span class="bday">1992-07-22</span>) </span>Luuliyo 22, 1992<span class="noprint ForceAgeToShow"> (&nbsp;28jir)</span>
+<span class="birthplace">[[Grand Prairie]], [[Texas]], [[Gobolada Isku Tegay ee Ameerika|U.S]].</span>
 |-
 ! scope="row" |Shaqada
-| class="role" |<div class="hlist " style="margin-left:0em;"><div class="plainlist">
-* [[fanaan]]
-* [[Jilaa]]
-* Naqshadeeyayaasa dharka
-* Falanqeeyaha
-</div></div>
+| class="role" |<div class="hlist ">
+* fanaan
+</div>
 |-
-| colspan="2" style="text-align:center" |'''Musical career'''
+! scope="row" |Sanadaha Shaqada
+|2002–hada
+|-
+! scope="row" |Abaal-marin
+|
+|-
+| colspan="2" style="text-align:center" |'''Xirfad muusik'''
 |-
 ! scope="row" |Nooca fanka
-|<div class="hlist " style="margin-left:0em;"><div class="plainlist">
+|<div class="hlist ">
 * [[Pop music|Pop]]
-* [[Dance music|dance]]
-* [[Contemporary R&B|R&B]]
-* [[Hip hop music|hip hop]]
-</div></div>
+* [[dance-pop]]
+* [[electropop]]
+</div>
 |-
 ! scope="row" |Qalabka
-| class="note" |[[Cod]]
-|-
-! scope="row" |<span style="white-space:nowrap">Sanadaha Shaqada</span>
-|2002–xaadir
+| class="note" |<div class="hlist ">
+* [[Cod]]
+* piano
+</div>
 |-
 ! scope="row" |Calaamadaha
-|[[Hollywood Records|Hollywood]] (2008–14)
-[[Interscope Records|Interscope]] (2014–xaadir)
+|<div class="hlist ">
+* [[Hollywood Records|Hollywood]]
+* [[Interscope Records|Interscope]]
+</div>
 |-
 ! scope="row" |<span style="white-space:nowrap">Falalka la xiriira</span>
-|<div class="hlist " style="margin-left:0em;"><div class="plainlist">
+|<div class="hlist ">
 * [[Selena Gomez & the Scene]]
-* 
-* [[Taylor Swift]]
-</div></div>
+* [[Julia Michaels]]
+*
+* [[Rock Mafia]]
+</div>
 |-
 ! scope="row" |Website
 |<span class="url">[http://selenagomez.com selenagomez.com]</span>
