*Empty MediaWiki Message*

--- a/Cabdi_Indhobuur.mw
+++ b/Cabdi_Indhobuur.mw
@@ -1,4 +1,4 @@
-'''Cabdi Bashiir Indhobuur''' waxa uu ka mid ahaa abwaanadii fara-ku-tiriska ahaa ee loogu jeclaa fanka [[Soomaaliya]]. Wuxuuna ku dhashay degmada [[Gaalkacyo]] ee gobolka [[Mudug]], [[Soomaaliya]].
+'''Cabdi Indhobuur''' waxa uu ka mid ahaa abwaanadii fara-ku-tiriska ahaa ee loogu jeclaa fanka [[Soomaaliya]]. Wuxuuna ku dhashay degmada [[Gaalkacyo]] ee gobolka [[Mudug]], [[Soomaaliya]].
 1963dii ayuu wuxuu ku biiray ciidaanka booliiska, 1972dii ayuu u soo wareegay Magaalo-madaxda [[Muqdisho]] isagoo ka howlgalay Dekadda, kadibna ku soo wareegay kooxda Heegan.
 
 __TOC__Abdi bashiir waxuu ku soo barbaray magaalada Gaalkacyo,waxuuna bartay Quraanka iyo shareecada Islaamka oo uu meel sare ka gaaray oo culumada ay ka mid ahaayeen Macallim Mohamed iyo Macallim Daahir allaha u naxariistee uu ka aflaxay ka dibna dadka reer Gaalkacyood ka ah ku qiimayn jireen aqoontaas alle siiyey.
