*Empty MediaWiki Message*

--- a/Cabdiweli_Gaas.mw
+++ b/Cabdiweli_Gaas.mw
@@ -1,5 +1,5 @@
 {{Macluumaad Qof Madax Ah
-|name           = Cabdiweli Maxamed Cali<br />{{ar icon}} عبدالولي محمد علي 
+|name           = Cabdiweli gaas />{{ar icon}} عبدالولي محمد علي 
 |honorific-suffix = 
 |image          = Cabdiweli Maxamed Cali.jpg
 |birth_date     = {{birth date and age|1965|7|2|df=y}}
@@ -25,7 +25,7 @@
 |religion       = [[Islaam]]
 }}
 
-'''Cabdiweli Maxamed Cali''' ([[Carabi]]: عبدالولي محمد علي‎) wuxuu ahaa Ra'isul wasaaraha Dawladda kumeel gaarka ee [[Soomaaliya]] juun 2011 ilaa oktoobar 2012. Janaayo 2014 wuxuu noqday madaxwaynaha 5aad ee maamul goboleedka puntland.
+'''Cabdiweli gaas''' ([[Carabi]]: عبدالولي محمد علي‎) wuxuu ahaa Ra'isul wasaaraha Dawladda kumeel gaarka ee [[Soomaaliya]] juun 2011 ilaa oktoobar 2012. Janaayo 2014 wuxuu noqday madaxwaynaha 5aad ee maamul goboleedka puntland.
 
 == Taariikh nololeedka Cabdiwali ==
 Cabdiweli waa nin somali mareykan ah oo asal ahaan ka soo jeedo gobolka [[Mudug]] ee bartamaha [[Soomaaliya]].
