*Empty MediaWiki Message*

--- a/Selena_Gomez.mw
+++ b/Selena_Gomez.mw
@@ -65,7 +65,7 @@ Gomez wuxuu hormuud u ahaa heesaha kooxdii hore ee Selena Gomez & the Scene kaas
 
 * ''[[Stars Dance]]'' (2013)
 * ''[[Revival]]'' (2015)
-* ''[[Rare (Album)|Rare]]'' (2020)
+* ''[[Rare (Album)|Rare]]'' (2020)<ref>https://www.billboard.com/articles/business/chart-beat/8548614/selena-gomez-rare-number-one-billboard-200-albums-chart</ref>
 
 === Selena Gomez & the Scene albums ===
 
