*Empty MediaWiki Message*

--- a/Selena_Gomez.mw
+++ b/Selena_Gomez.mw
@@ -1,4 +1,4 @@
-'''Selena Marie Gomez''' (waxay dhalatay 22-kii [[Luuliyo|Luulyo]] [[1992]]) waa fanaan Mareykan ah, jilaa, iyo soo saare telefishin. <ref name="Entertainment Weekly">{{cite news|last1=Bacle|first1=Ariana|title=Selena Gomez shares ominous 13 Reasons Why teaser|url=https://ew.com/tv/2017/01/25/selena-gomez-13-reasons-netflix-teaser/|accessdate=January 25, 2017|work=Entertainment Weekly|date=January 25, 2017}}</ref>  Ka dib markii ay ka soo muuqatay taxanaha telefishanka carruurta ee ''Barney & Friends'' (2002 --2004), waxay heshay aqoonsi ballaadhan oo ku saabsan sawirkeeda ''Alex Russo'' ee taxanaha telefishanka Emmy Award ee guuleysta ''Wizards of Waverly Place'' (2007-2012). Laga soo bilaabo 2008 ilaa 2011 Gomez waxay sidoo kale xiddig ka eheed filimada ''[[Another Cinderella Story]]'', ''[[Princess Protection Program]]'', ''[[Wizards of Waverly Place: The Movie]]'', ''[[Ramona and Beezus]]'', iyo ''[[Monte Carlo]]'' ,Intaa ka dib, waxay diiradda saartay doorka qaan-gaarnimada tan iyo 2012, iyada ''[[Spring Breakers]]'', ''[[Getaway]]'', ''[[The Fundamentals of Caring]]'', iyo ''[[The Dead Don't Die]],'' Waxay ku hadashaa astaamaha ''Mavis'' ee ku saabsan filimada hotelka  ''[[Hotel Transylvania]]'', waxayna u adeegtaa soosaaraha fulinta ee musalsalada netflix ''[[13 Reasons Why]]'' (2017- 2020) iyo musalsalka [[Netflix]] ''[[Living Undocumented]]'' (2019).
+'''Selena Marie Gomez''' (waxay dhalatay 22-kii [[Luuliyo|Luulyo]] [[1992]])<ref>"Selena Gomez Biography"</ref><ref>"Selena Gomez Biography"</ref><ref>"Selena Gomez Biography"</ref> waa fanaan Mareykan ah, jilaa, iyo soo saare telefishin. <ref name="Entertainment Weekly">{{cite news|last1=Bacle|first1=Ariana|title=Selena Gomez shares ominous 13 Reasons Why teaser|url=https://ew.com/tv/2017/01/25/selena-gomez-13-reasons-netflix-teaser/|accessdate=January 25, 2017|work=Entertainment Weekly|date=January 25, 2017}}</ref>  Ka dib markii ay ka soo muuqatay taxanaha telefishanka carruurta ee ''Barney & Friends'' (2002 --2004), waxay heshay aqoonsi ballaadhan oo ku saabsan sawirkeeda ''Alex Russo'' ee taxanaha telefishanka Emmy Award ee guuleysta ''Wizards of Waverly Place'' (2007-2012). Laga soo bilaabo 2008 ilaa 2011 Gomez waxay sidoo kale xiddig ka eheed filimada ''[[Another Cinderella Story]]'', ''[[Princess Protection Program]]'', ''[[Wizards of Waverly Place: The Movie]]'', ''[[Ramona and Beezus]]'', iyo ''[[Monte Carlo]]'' ,Intaa ka dib, waxay diiradda saartay doorka qaan-gaarnimada tan iyo 2012, iyada ''[[Spring Breakers]]'', ''[[Getaway]]'', ''[[The Fundamentals of Caring]]'', iyo ''[[The Dead Don't Die]],'' Waxay ku hadashaa astaamaha ''Mavis'' ee ku saabsan filimada hotelka  ''[[Hotel Transylvania]]'', waxayna u adeegtaa soosaaraha fulinta ee musalsalada netflix ''[[13 Reasons Why]]'' (2017- 2020) iyo musalsalka [[Netflix]] ''[[Living Undocumented]]'' (2019).
 {| class="infobox biography vcard" style="width:22em"
 ! colspan="2" style="text-align:center;font-size:125%;font-weight:bold" |<span class="fn">Selena Gomez</span>
 |-
