*Empty MediaWiki Message*

--- a/Selena_Gomez.mw
+++ b/Selena_Gomez.mw
@@ -63,13 +63,13 @@ Gomez wuxuu hormuud u ahaa heesaha kooxdii hore ee Selena Gomez & the Scene kaas
 
 === Solo albums ===
 
-* ''[[Stars Dance]]'' (2013)
-* ''[[Revival]]'' (2015)
-* ''[[Rare (Album)|Rare]]'' (2020)<ref>https://www.billboard.com/articles/business/chart-beat/8548614/selena-gomez-rare-number-one-billboard-200-albums-chart</ref>
+* ''[[Stars Dance]]'' (2013)<ref>"Selena Gomez Knocks Jay Z From Top of Billboard 200 With First No. 1 Album"</ref>
+* ''[[Revival]]'' (2015)<ref>"Selena Gomez Reveals New Album Title & Release Date"</ref><ref>"Album Review: Revival"</ref><ref>"Album of the week: A cooler, groovier, Selena Gomez emerges on 'Revival.'"</ref><ref>"Selena Gomez: "Revival""</ref>
+* ''[[Rare (Album)|Rare]]'' (2020)<ref>https://www.billboard.com/articles/business/chart-beat/8548614/selena-gomez-rare-number-one-billboard-200-albums-chart</ref><ref>"Selena Gomez Will Start 2020 Off Right by Releasing Her New Album"</ref><ref>"Rare by Selena Gomez Reviews and Tracks"</ref>
 
 === Selena Gomez & the Scene albums ===
 
-* ''[[Kiss & Tell]]'' (2009)
+* ''[[Kiss & Tell]]'' (2009)<ref>"iTunes – Music – DisneyMania 6 by Various artists"</ref><ref>"iTunes – Music – Tell Me Something I Don't Know by Selena Gomez"</ref>
 * ''[[A Year Without Rain]]'' (2010)
 * ''[[When the Sun Goes Down]]'' (2011)
 
