--- a/Cabdi_Tahliil.mw
+++ b/Cabdi_Tahliil.mw
@@ -1,13 +1,13 @@
 ::''Sharaxaad badan iyo faahfaahin [[fanaan]]iinta, fiiri [[Fanaaniinta Soomaaliya]].''
 
 {{Infobox person
-| honorific_prefix   = Cabdi Tahliil Warsame
+| honorific_prefix   = Cabdi Tahliil 
 | name               =  <br />محمدعبذ تهليل
 | honorific_suffix   = 
 | image              = File:Cabdi-Tahliil.jpg
 | image_size         = 
 | alt                = 
-| caption            = Cabdi Tahliil Warsame
+| caption            = Cabdi Tahliil 
 | native_name        = 
 | native_name_lang   = Soomaali
 | birth_name         =  <!-- only use if different from name above -->
@@ -79,7 +79,7 @@
 | footnotes          = 
 }}
 
-'''Maxamed Cabdi Warsame''' ({{lang-en|Mohamed Abdi Talil}}; {{lang-ar|محمدعبذ تهليل}}) ku magacdheeraa '''[[Tahliil]]''', waa [[fanaan]] [[Soomaaliyeed]] oo aad looga yaqaanno gayiga [[Soomaali]]da, kuna caan baxay magaca '''Cod Wanaagsane''' sababtoo ah wuxuu ka mid yahay kuwa ugu sareeya fanaaniinta codka fiican dhammaan fanaaniinta ku [[hees]]a af-[[Soomaali]]ga.<Ref>"[[fanaan]] [[Soomaaliyeed]] oo aad looga yaqaanno gayiga [[Soomaali]]da"</ref>
+'''Maxamed Cabdi Tahliil''' ({{lang-en|Mohamed Abdi Talil}}; {{lang-ar|محمدعبذ تهليل}}), waa [[fanaan]] [[Soomaaliyeed]] oo aad looga yaqaanno gayiga [[Soomaali]]da, kuna caan baxay magaca '''Cod Wanaagsane''' sababtoo ah wuxuu ka mid yahay kuwa ugu sareeya fanaaniinta codka fiican dhammaan fanaaniinta ku [[hees]]a af-[[Soomaali]]ga.<Ref>"[[fanaan]] [[Soomaaliyeed]] oo aad looga yaqaanno gayiga [[Soomaali]]da"</ref>
 
 Tahliil heesihiisa aad ayaa loo jeceyahay waana mid ka mid ah fannaaniinta qiimaha mugga weyn ku dhex leh umadda Soomaaliyeed. Fanaanka Maxamed Cabdi Warsame wuxuu uu ku dhashay gobolada dhexe ee Soomaaliya [[sanad|sanadkii 1953dii]] [[C.D|taariikhda Miilaadiga]].<Ref>"Tahliil wuxuu uu ku dhashay gobolada dhexe [[sanad|sanadkii 1953dii]] [[C.D|taariikhda Miilaadiga]]"</ref>
 
