*Empty MediaWiki Message*

--- a/Sugaal_Cabdulle_Cumar.mw
+++ b/Sugaal_Cabdulle_Cumar.mw
@@ -1,7 +1,7 @@
-----Abdirahman mursal abdi
+{{nadiifin|sababta= maqaalkaan wuxuu u baahanyahay hagaajin}}
 '''Sugaal Cabdulle Cumar''' waa abwaan [[Soomaaliya|Soomaaliyeed]] ee curiya maansooyinka kala duwan oo ay ka mid yihiin [[Gabay]], [[Geeraar]], [[Jiifto]]. Abwaan Sugaal waxaa u dheer inuu yahay hobol ka mid ahaa hobolada Soomaaliyeed oo uu curiye riwaayado iyo heeso fara badan. waxaa kaloo waliba intaa u dheer inuu ku luuqeeyo heesaha somaliga ah. Abwaanka riwayadaha uu sameeyay waxaa ka mid ah [[magaalo joog xumo]] oo dhab ahaan tii aad iyo aad caan u ah.Kana riwaayada dhifka iyo naadirka ah dadka somaliyeed ay isku wada raacsan yihiin in ay tahay mada daala dhab ah 
 
- sida dadka riwaayadaha fiirsada ay ogyihiinba. Abwaan Sugaal Cabdulle Cumar waxa uu kamid ahaa  hoballadii kooxda Heegan ee ciidanka booliiska soomaaliyeed . Abwaanka heesa uu ku luuqeeyo waa heesaha wadaniga ah oo ay gobalada reer galbeedku ugu wacaan [[Country Music]] intaas waxaa sii dheer uu yahay shaqsi wadaninimada ku weytahay jacel had iyo jeer in wadanka soomaaliya uu nabad noqdo taasina waxaa cadey kaaga filin ilaa iyo hada inuusan wadankiisa ka tagin ayadoo dhibaatooyinka kala duwan wadanka uu maray ilaa iyo hadan uu ku jiro. Heesahiisa caanka ah waxa ka mid ah Layla, Heestii Cuna Mallayga. Abwaanka gabaydiisa cusub waxa aad ka heli kartaa ayagoo muuqaal ah youtube.
+sida dadka riwaayadaha fiirsada ay ogyihiinba. Abwaan Sugaal Cabdulle Cumar waxa uu kamid ahaa  hoballadii kooxda Heegan ee ciidanka booliiska soomaaliyeed . Abwaanka heesa uu ku luuqeeyo waa heesaha wadaniga ah oo ay gobalada reer galbeedku ugu wacaan [[Country Music]] intaas waxaa sii dheer uu yahay shaqsi wadaninimada ku weytahay jacel had iyo jeer in wadanka soomaaliya uu nabad noqdo taasina waxaa cadey kaaga filin ilaa iyo hada inuusan wadankiisa ka tagin ayadoo dhibaatooyinka kala duwan wadanka uu maray ilaa iyo hadan uu ku jiro. Heesahiisa caanka ah waxa ka mid ah Layla, Heestii Cuna Mallayga.
 
 Abwaanka waxuu ku dhashay magaaladada gaalkacyo kuna soo koray yaraantiisa halkaasoo ah meesha uu fanka iyo curinta kasoo bilaabay . asagoo waagiisa yaraa ciyaari jiray dhaantada . 
 abwanka kadib wuxuu u soo ambabaxay magaala madaxda soomaliya ee muqdisho halkaas uu kaga biiray kooxdii caanka aheyd ee heegan laguna magacaabi jiray hanuuniyaasha qaranka . 
@@ -9,10 +9,8 @@ kooxda waxaa madax u ahaa allaha u naxariisto cabdi bashiir indha buur .
 abwaan sugaal abdulle cumar waxuu ilaahey haybad u siiyey aragti fogaanta iyo cabbir maanso oo la yaab leh, haddaba heesahii uu sameeyey waxaa ka mid ahaa . 
 qabyaaladda waa lagu caloobaa , ha ku socoto sidii loogu tala galay iyo anigu soomali baan ahay summadeydu waa qaran , 
 dhinaca jaceylkana haddaan kasoo qaadano waxaa ka mid ah heestii caanka aheyd ee layla labadii walaale midkii lacag lahaa weynee , xamdiyeey walaaley haddaan kaaga tago xamar xanuunkaada i deyn maayo , badda yeesan kula noqon biyo aan laga xigin iyo kuwa kaloo badan . 
- abwaanka sidoo kale waxaa jira inuu kasoo jeedo qoys u dhashay hal abuurka laga soo bilaabo ayeeydiisa ,hooyadiisa barni deyr , aabihiisa cadulle cumar . waxaa kaloo jira walaalo la dhashay oo gabya sida liiban cabdulle cumar iyo Gallad cabdulle cumar oo labadaba ah gabyaal aan sidaa u shaac bixin balse ilaahey ku hibbeeyey hal abuur heer sare ah . 
- abwaan sugaal xilligaan wuxuu ku noolyahay magaalada muqdisho . 
-www.youtube.com/watch?v=MjK7fnBu25E
-qore: Abdirahman mursal abdi
+abwaanka sidoo kale waxaa jira inuu kasoo jeedo qoys u dhashay hal abuurka laga soo bilaabo ayeeydiisa ,hooyadiisa barni deyr , aabihiisa cadulle cumar . waxaa kaloo jira walaalo la dhashay oo gabya sida liiban cabdulle cumar iyo Gallad cabdulle cumar oo labadaba ah gabyaal aan sidaa u shaac bixin balse ilaahey ku hibbeeyey hal abuur heer sare ah . 
+
 
 [[Category:Abwaanada Soomaaliya]]
 [[Category:Fanka Soomaaliya]]
