*Empty MediaWiki Message*

--- a/Beeldaaje_Faarax.mw
+++ b/Beeldaaje_Faarax.mw
@@ -40,7 +40,7 @@
 |-
 |}
 
-
+'''Beeldaaje Faarax Beeldaaje''' (noolaa 1948 ilaa 2012) wuxuu ka mid ahaa xildhibaanadii ugu horeeyay ee baarlamaanka Soomaaliya sanadkii 1959kii kasoo galay degmada [[Qandala]] ee gobolka [[Bari]]. sidoo kale wuxuu ahaa oday dhaqameed soomaaliyeed oo waqtigiisa inta badan geliyey sidii beelaha soomaaliyeed ay ugu wada noolaan lahaayeen nabad iyo barwaaqo<ref>{{Cite web|url=https://halgan.net/2012/04/raisulwasaaraha-dfkm-oo-tacsi-u-diray-eheladii-beeldaaje-faarax-warsaxaafadeed/|}}</ref>
  
 
 
@@ -70,7 +70,7 @@ Waxuu Safaro ku tagay dalal badan oo aduunka ah isagoo had iyo jeer ka hadli Jir
 
 Dadka u lahaaa Aqoonta waxay ku tilmaameen inuu ahaa nin Afgaaban, Xishood leh, ka Adag Afkiisa & Adinkiisa, Jecel Nabada, Xushmad fiicana ku dhex leh Bulshada isagoo in badan ka shaqeeyey Nabada & Xasiloonida mudadi uu hayey Xilka Beeldaajaha .
 
-== Prominent figures ==
+== Dadka caanka ah ==
 
 * [[Beeldaaje Cabdullaahi|Beeldaaje Cabdullahi Beeldaaje Maxamed]], odayaasha ugu cansaanan jiray gobolada Puntland kana mid aha aasaasayasha dowlad [[Puntland]] kana mid aha xildhibaanada ugu horreeyey ee Soomaaliya yeelato 1960 laga soo doortay magaalada Qandala. 
 * [[Dr Khalif Bile]], Ex-Head of WHO in Pakistan, Afghanistan and Iran
@@ -83,4 +83,6 @@ Dadka u lahaaa Aqoonta waxay ku tilmaameen inuu ahaa nin Afgaaban, Xishood leh, 
 * [[Shiekh Nuradin Ali]], Prominat Somaii Islamic [[Salafi]] scholar
 Haji. Ibrahim Osman Unlaye , Businessman
 
-<references/>
+==tixraac==
+
+[[Category:Shaqsiyadaad]] [[category:Siyaasadda Soomaaliya]]
