*Empty MediaWiki Message*

--- a/Ra'iisul_wasaarayaashii_Soomaaliya.mw
+++ b/Ra'iisul_wasaarayaashii_Soomaaliya.mw
@@ -155,7 +155,7 @@ Raisulwasaraayaashii Somaliya==
 | ''Madaxbanaan''
 |-
 ! style="background:#C0C0C0; color:black"| 12
-| [[Nur Hassan Hussein]]
+| [[Nuur Cade]]
 |[[File:Nuur Xasan Xuseen.jpg|80px|link=Special:FilePath/Nuur_Xasan_Xuseen.jpg]]
 | 1938–2020
 | —
@@ -238,7 +238,7 @@ Raisulwasaraayaashii Somaliya==
 | ''Madaxbanaan''
 |-
 !(14)
-|[[Hassan Ali Khayre]]
+|[[Hassan Khayre]]
 |[[File:Hassan Ali.png|thumb|83x83px]]
 |1968–
 |—
