*Empty MediaWiki Message*

--- a/Maxamed_Abokor.mw
+++ b/Maxamed_Abokor.mw
@@ -6,7 +6,7 @@
 | langs = [[af soomaali]]
 | rels = [[Islaam]] ([[Sunni]])
 | related-c =  [[Muuse Abokor]], Samane Abokor, Cumar Jibriil, tolalka kale ee beesha [[Isaaq]] iyo [[Soomaalida]] <!-- CONFIRMED RELATIONS!!! -->|
-| native_name = 
+| native_name = Abokor Axmed Cabdi Abokor Cumar muumin Abokor Iyo cali Abokor 
 | native_name_lang = 
 | related_groups = 
 }}
