/* Gabayahannada Caanka ah[1] */

--- a/Gabay.mw
+++ b/Gabay.mw
@@ -137,6 +137,7 @@ Maanta qiimo weyn lama siiyo ku luuqaynta gabayga, sababta oo ah xaaladda nolosh
 # Cabdilahi Suldan Timacadde
 # Ismaaciil. X. Xisri 
 # Xasan Tarabbi
+# Saciid Gacameey
 # Xaaji. A. Afqaloc 
 # M.I.I. "Hadrawi" 
 # Max'd Xaashi "Gaarriye"
