*Empty MediaWiki Message*

--- a/Daahir_Rayaale_Kaahin.mw
+++ b/Daahir_Rayaale_Kaahin.mw
@@ -1,5 +1,4 @@
-{{gumud}}
-
+{{nadiifin|sababta= maqaalkaan wuxuu u baahanyahay in laga hagaajiyo heerka tayada, sidoo kale waxaa ka maqan xigasho }}
 '''Taariikh nololeedkii Daahir Rayaale'''
 
 [[File:Dahir Riyale Kahin.jpg|thumb|right|700px]]
