*Empty MediaWiki Message*

--- a/Cabdisalaam_Bashiir_Cabdisalaam.mw
+++ b/Cabdisalaam_Bashiir_Cabdisalaam.mw
@@ -25,8 +25,19 @@
 | successor3 = 
 | party = 
 }}'''Cabdisalam Bashiir Cabdisalam''' ({{lang-so|Cabdisalaam Bashiir Cabdisalaam}}, {{lang-ar|عبدالسلام بشير عبدالسلام}}) waa siyaasi [[soomaali|Soomaali]] [[Isweedhan|sweedhish]] ah. Waa duqa haatan ee Magaalada [[Boosaaso]] oo ah Magaalada saddexaad ee Soomaaliya ugu weyn, Xarunta Ganacsiga iyo saqaafada [[Puntland]], [[Soomaaliya]]. 6dii Sebteembar  2018  ayaa golaha deegaanku si wada jira ugu doorteen Abdisalaam duqa xiga muddo 5 sano ah. <ref>{{cite web |title=Abdisalam Bashir elected as Bossaso mayor |url=https://www.halbeeg.com |website=Halbeeg |accessdate=September 6, 2018}}</ref><ref>https://en.halbeeg.com/2018/09/06/abdisalam-bashir-elected-as-bossaso-mayor/</ref>. Ka hor Cabdisalaam wuxuu ahaa Duqa Degmada [[Waaciye]] ee Gobolka Bari, Puntland, Soomaaliya.
+
+
+
+
+
+
+
+
+
+
 ==Tixraac== 
 
 
 
-Boosaaso deegaan ahaan waxaa dega beesha mooricase Dishiishe axmed harti- Daarood waana reer saamayn ku leh Puntland iyo Soomaaliya, Sidoo kale bosaso haatan waa xarun weyn oo soomali badani ku nooshahay gaar ahaan qabaa'ilka Hartiga oo magaaladu u noqotay xarun ganacsi iyo saqaafadeed. iyo soomaali kale oo aad u farabadan.
+
+[[category:Siyaasiyiinta Somaliyeed]]
