--- a/Cumar_Sharmaarke.mw
+++ b/Cumar_Sharmaarke.mw
@@ -1,12 +1,45 @@
-'''Cumar Cabdirashiid Cali Sharmaarke''' (af english ''Omar Abdirashid Ali Sharmarke'' , af carabi ''عمر عبد الرشيد علي شارماركي'' )waxa oo dashay 18 june sanadka marka oo ahaa 1960-kii, waa diblomaasi soomaaliyeed hadana ah nin ku lug leh seyaasada Soomaaliya, waana Ra'esul-wasaraha Soomaalieed ee haatan xilka haaya.
+{{Infobox officeholder
+|name         = Cumar Cabdirashiid Cali Sharmaarke 
+|image        = Omarasharmarke2.jpg
+|office       = 13th [[Ra'iisul wasaarayaashii Soomaaliya|Raiisul wasaaraha Soomaaliya]]
+|president    = [[Xasan Sheekh Maxamuud]]<br/>[[Maxamed Cabdulaahi Maxamed]]
+|term_start   = 24 Diseembar 2014
+|term_end     = 1 Maarso 2017
+|predecessor  = [[Cabdiweli Sheekh Axmed]]
+|successor    = [[Xasan Cali Khayre]]
+|president1   = [[Shiikh Shariif Shiikh Axmad]]
+|term_start1  = 14 Feebaraayo 2009
+|term_end1    = 21 Sebtembar 2010
+|predecessor1 = [[Nuur Xasan Xuseen]]
+|successor1   = [[Cabdiwaaxid Cilmi Goonjeex]] {{small|(kumeel gaar)}}
+|birth_date   = {{birth date and age|1960|6|18|df=y}}
+|birth_place  = [[Muqdisho]], [[Soomaaliya]]
+|death_date   = 
+|death_place  = 
+|party        = [[Siyaasi madax banaan|ka madax banaan]]
+|alma_mater   = [[Jaamacada Carleton]]
+|signature    = Cumar Cabdirashiid Cali Sharmaarke signature.svg
+}}
+'''Cumar Cabdirashiid Cali Sharmaarke''' (dhashay 18 juun 1960) waa diblomaasi [[Soomaalida|soomaaliyeed]] iyo siyaasi. wuxuu ahaa [[Ra'iisul wasaarayaashii Soomaaliya|Raiisul Wasaaraha Soomaaliya]] Laga soo bilaabo 2009 illaa 2010. Waxa uu markii dambe si kooban u adeegay danjiraha [[Soomaaliya]] u fadhiya [[Maraykanka]] sanadkii 2014. waxaa mar kale loo magacaabay Raiisul Wasaaraha Soomaaliya Bishii December 2014. Muddadiisu waxay dhammaatay 1-dii Maarso 2017 waxaana beddalay  [[Xasan Cali Khayre]] .<ref>{{Cite news|url=https://abcnews.go.com/International/wireStory/somalias-president-appoints-prime-minister-45680284|title=Somalia's new president appoints prime minister|last=News|first=ABC|newspaper=ABC News|access-date=2017-02-23|language=en}}</ref>
 
-'''Taariikh nololeedkiisa''' :
-Cumar aabihees waa madaxweenihi hore ee Somalia, Cabdirashiid Cali Sharmaarke,wiilkiisa kaa oo latoogtay sanadki marka oo ahaa 1969, hooyadiisna waa Ruqayu Daahir Cali Boos, Ruqayu aabaheed waxa oo ahaa wadaad soomaaliyeed oo caan ah kaa oo kasoojeedo reer meheri.
-waxa oo Cumar Cabdirashiid waxku soo bartay jaamacada "Carleton University" oo ku taala magaalada Ottawa ee dalka Canada waxaana oo ka qaatay darajooiyen celmi ah oo dinacyada cilmiga seyaasada ama "political saynis, political science" iyo daqaalaha seyaasadeed ama " political economy, Mr Cumar waxa oo wada haysta dhalashada wadanka Canada iyo tan Soomaaliya-ba.
-waxa oo hore o soo qabtay shaqooyin dinaca diplomaasiyada ah wadamada Sri Lanka iyo Sierra Leone asaga oo matalaaya United Nation-ka, waxa kale oo soo qabtay jagada lataleyaha dinaca diblomaaseyada ee dhibaatade Darfor ee dhalka Sudan, inta oo san qaban jagada Ra'esulwasaaraha Soomaaliya waxa oo ahaa safiirka Soomaaliya ee wadanka mareekanka.
+==Noloshiisa shaqsiyadeed==
+Sharmarke wuxuu ku dhashay magaalada [[Muqdisho]] 1960-kii , oo ku taala koonfurta-bari ee gobolka [[Banaadir]] ee Soomaaliya. <ref name="Aspanpm">{{cite news|title=Somali President appoints new prime minister|url=http://www.africareview.com/News/Somali-President-appoints-new-prime-minister/-/979180/2560202/-/view/printVersion/-/1mbvgh/-/index.html|accessdate=18 December 2014|agency=Africa Review|date=17 December 2014}}</ref> Waa wiilka Madaxweynihii hore ee labaad iyo Raiiselwasaarihii ugu horreeyay ee Soomaaliya, [[Cabdirashiid Cali Shermarke]] , oo la diley 1969,
 
-''Xilka Ra'esulwasaarnimada''
-Taariiqdu marka ay ahayd 13 bishi febraayu ee sanadka 2009-ka, Madaxweenaha haatan xilka haaya ee Soomaaliya waxa oo soo magacaabay Mr Cumar Cabdirashiid xilka Ra'esulwasaarnimada Soomaaliyeed, dad badan ayaa aad o soo daweeyay magacaabista,14-kii isla bishaas ayaa oo kalsoonida ka helay barlamaanka Soomaaliya ayada oo ay taageertay magacaabista 414 mudane oo katirsan baarlamaanka, 9 ay ka soo horjeesatay, 2 xildhibaana ay ka aamostay.
+wuxuu wax ku bartay [[Jaamacadda Carleton]] ee [[Ottawa]] , halkaas oo uu ku soo qaatay darajo cilmiga siyaasada iyo dhaqaalaha siyaasadeed . In kasta oo qoyskiisu ee degenyihiin gobolka [[Virginia]] ee dalka Mareykanka , wuxuu haystaa dhalashada Soomaaliya iyo [[Kanada]] labadaba .
 
-[[Category:Taariikh]]
-[[Category:Muqdisho]]
+
+
+
+
+
+
+
+
+
+
+
+
+==Tixraac==
+{{gumud}}
+[[Category:Raiisul Wasaarayaasha Soomaaliya]]
+[[Category:Dadka ka soo jeeda Muqdisho]]
