*Empty MediaWiki Message*

--- a/Cumar_Sharmaarke.mw
+++ b/Cumar_Sharmaarke.mw
@@ -23,7 +23,7 @@
 '''Cumar Cabdirashiid Cali Sharmaarke''' (dhashay 18 juun 1960) waa diblomaasi [[Soomaalida|soomaaliyeed]] iyo siyaasi. wuxuu ahaa [[Ra'iisul wasaarayaashii Soomaaliya|Raiisul Wasaaraha Soomaaliya]] Laga soo bilaabo 2009 illaa 2010. Waxa uu markii dambe si kooban u adeegay danjiraha [[Soomaaliya]] u fadhiya [[Maraykanka]] sanadkii 2014. waxaa mar kale loo magacaabay Raiisul Wasaaraha Soomaaliya Bishii December 2014. Muddadiisu waxay dhammaatay 1-dii Maarso 2017 waxaana beddalay  [[Xasan Cali Khayre]] .<ref>{{Cite news|url=https://abcnews.go.com/International/wireStory/somalias-president-appoints-prime-minister-45680284|title=Somalia's new president appoints prime minister|last=News|first=ABC|newspaper=ABC News|access-date=2017-02-23|language=en}}</ref>
 
 ==Noloshiisa shaqsiyadeed==
-Sharmarke wuxuu ku dhashay magaalada [[Muqdisho]] 1960-kii , oo ku taala koonfurta-bari ee gobolka [[Banaadir]] ee Soomaaliya. <ref name="Aspanpm">{{cite news|title=Somali President appoints new prime minister|url=http://www.africareview.com/News/Somali-President-appoints-new-prime-minister/-/979180/2560202/-/view/printVersion/-/1mbvgh/-/index.html|accessdate=18 December 2014|agency=Africa Review|date=17 December 2014}}</ref> Waa wiilka Madaxweynihii hore ee labaad iyo Raiiselwasaarihii ugu horreeyay ee Soomaaliya, [[Cabdirashiid Cali Shermarke]] , oo la diley 1969,
+Sharmarke wuxuu ku dhashay magaalada [[Muqdisho]] 1960-kii , oo ku taala koonfurta-bari ee gobolka [[Banaadir]] ee Soomaaliya. <ref name="Aspanpm">{{cite news|title=Somali President appoints new prime minister|url=http://www.africareview.com/News/Somali-President-appoints-new-prime-minister/-/979180/2560202/-/view/printVersion/-/1mbvgh/-/index.html|accessdate=18 December 2014|agency=Africa Review|date=17 December 2014}}</ref> Waa wiilka Madaxweynihii hore ee labaad iyo Raiiselwasaarihii ugu horreeyay ee Soomaaliya, [[Cabdirashiid Cali Sharmaarke]] ,
 
 wuxuu wax ku bartay [[Jaamacadda Carleton]] ee [[Ottawa]] , halkaas oo uu ku soo qaatay darajo cilmiga siyaasada iyo dhaqaalaha siyaasadeed . In kasta oo qoyskiisu ee degenyihiin gobolka [[Virginia]] ee dalka Mareykanka , wuxuu haystaa dhalashada Soomaaliya iyo [[Kanada]] labadaba .
 
