*Empty MediaWiki Message*

--- a/Cabdiwaxid_Goonjeex.mw
+++ b/Cabdiwaxid_Goonjeex.mw
@@ -14,7 +14,7 @@ Current position =Senator ka tirsan aqalka sare ee dowladda Soomaaliya
 | party = [[Dowlada Federalka Ku Meel Gaarka ah]]
 | image = 
 }}
-'''Cabdiwaaxid Cilmi Goonjeex''' oo loo yaqaan Cadiwaaxid Goonjeex , <ref>http://sunatimes.com/articles/445/SomaliaSharmarke-Hands-Over-to-Acting-Prime-Minister</ref> waa siyaasi [[Soomaalida|soomaali]] ah. Wuxuu hadda yahay Senator ka tirsan aqalka sare ee baarlamaanka federaalka ee matalaya gobolka [[Galguduud]], degmada [[Caabudwaaq]]. Laga soo bilaabo bishii Sebtembar ilaa Oktoobar 2010, wuxuu ahaa ku simaha [[Ra'iisul wasaarayaashii Soomaaliya|Raiisul Wasaaraha Soomaaliya]] , jagadii uu ka dhaxlay [[Cumar Cabdirashiid Cali Sharmaarke|Cumar C / rashiid Cali Sharmarke]] .<ref>[http://www.rulers.org/ruls2.html#somalia Rulers – Prime Minister of Somalia – Abdiwahid Elmi Gonjeh]</ref><ref>[http://english.peopledaily.com.cn/90001/90777/90855/7149413.html Somali interim PM hails changes in gov't as "historic"]</ref> Kahor magacaabistiisa, Gonjeh wuxuu ahaan jiray Ku Xigeenka Ra'iisul Wasaaraha iyo Wasiirka Gaadiidka dowlada federaalka.<ref name="Acting PM">{{cite news|title=Somalia: President appoints acting PM |url=http://www.africanews.com/site/Somalia_President_appoints_acting_PM/list_messages/34774 |accessdate=13 June 2012 |newspaper=Africa News |date=22 September 2010 |url-status=dead |archiveurl=https://web.archive.org/web/20120108165141/http://www.africanews.com/site/Somalia_President_appoints_acting_PM/list_messages/34774 |archivedate=8 January 2012 }}</ref>
+'''Cabdiwaaxid Cilmi Goonjeex''' oo loo yaqaan Cadiwaaxid Goonjeex , <ref>http://sunatimes.com/articles/445/SomaliaSharmarke-Hands-Over-to-Acting-Prime-Minister</ref> waa siyaasi [[Soomaalida|soomaali]] ah. Wuxuu hadda yahay Senator ka tirsan aqalka sare ee baarlamaanka federaalka ee matalaya gobolka [[Galguduud]], degmada [[Caabudwaaq]]. Laga soo bilaabo bishii Sebtembar ilaa Oktoobar 2010, wuxuu ahaa ku simaha [[Ra'iisul wasaarayaashii Soomaaliya|Raiisul Wasaaraha Soomaaliya]] , jagadii uu ka dhaxlay [[Cumar Cabdirashiid Cali Sharmaarke|Cumar C / rashiid Cali Sharmarke]] .<ref>[http://www.rulers.org/ruls2.html#somalia Rulers – Prime Minister of Somalia – Abdiwahid Elmi Gonjeh]</ref><ref>[http://english.peopledaily.com.cn/90001/90777/90855/7149413.html Somali interim PM hails changes in gov't as "historic"]</ref> Kahor magacaabistiisa, Goonjeex wuxuu ahaan jiray Ku Xigeenka Ra'iisul Wasaaraha iyo Wasiirka Gaadiidka dowlada federaalka.<ref name="Acting PM">{{cite news|title=Somalia: President appoints acting PM |url=http://www.africanews.com/site/Somalia_President_appoints_acting_PM/list_messages/34774 |accessdate=13 June 2012 |newspaper=Africa News |date=22 September 2010 |url-status=dead |archiveurl=https://web.archive.org/web/20120108165141/http://www.africanews.com/site/Somalia_President_appoints_acting_PM/list_messages/34774 |archivedate=8 January 2012 }}</ref>
 
 Bartamihii sanadkii 2012, Goonjeex wuxuu isu soo sharaxay inuu yahay murashax doorashadii madaxtinimada Soomaaliya ee 2012 .<ref name="Afpspv">{{cite news|title=Somalia’s presidential vote|url=http://www.capitalfm.co.ke/news/2012/09/somalias-presidential-vote/|accessdate=10 September 2012|newspaper=AFP|date=10 September 2012}}</ref>
 
