Replacing Le_Transport_Lagunaire_à_Abidjan_(STL)_réalisé_par_Bouba_Kam's.webm with [[File:Le_Transport_Lagunaire_à_Abidjan_(STL)_réalisé_par_Bouba_Kams.webm]] (by [[:c:User:CommonsDelinker|CommonsDelinker]] because: [[:c:COM:FR|File renamed]]:).

--- a/Abidjan.mw
+++ b/Abidjan.mw
@@ -3,7 +3,7 @@
 == Taariikh ==
 Dhamaadkii qarnigii 18aad ayay farnsiisku qabsadee wadanka Ivory Coast,magaalada abidjan waxa laqabsaday sandkii 1934 caasimada wadanka waxa ay noqotay sandkii 1983 kadib caasimada wadanka waxa loowareejiyay magaalda [[Yamoussoukro]] kadib markii uu barlamaanku sidaas ansixiyay,laakiin magaalada abijan wali waxa looyaqaanaa caasimada dhabtaha ee wadanka,wali waxasiiah safaarado iyo xafiisyo aydawladu leedahay.
 == Dekeda magaalada ==
-[[File:Le Transport Lagunaire à Abidjan (STL) réalisé par Bouba Kam's.webm|left|thumb|Abidjan]]
+[[File:Le Transport Lagunaire à Abidjan (STL) réalisé par Bouba Kams.webm|left|thumb|Abidjan]]
 Magaaladu waxaay kutaalaa kinaal biyood kayimaada bada oo lagumagacaabo,[[Lagwin]] kaas oo kuxidhma [[Gacanka Gaana]] magaaladu waxa ay waynaatay kadib markii ladhisay dekeda, kadib magaaladu waxa ay noqotay caasimada mustacmaradii faransiiska,waxa aysiiwaynaatay kadib markii lasameeyay qayb cusub oo dakada kamida oo lamagcabaxaday [[Firiide]] kadib magaaladu waxa ay noqotay caasimada galbeedka [[Afrika]] ee farnsiiska
 
 {{Caasimadaha Afrika}}
