--- a/Mahadaay_Weyn.mw
+++ b/Mahadaay_Weyn.mw
@@ -4,3 +4,5 @@ Gobolka shabeelaha dhexe wuxuu lahaan jiray warshado badan, waxaana ka mid ah wa
 
 
 {{Degmooyinka Gobolka Shabeellaha Dhexe}}
+iyo weliba Warshaddii hubka fudud iyo
+Rasaasta ee Dowlaadii Kacaanku ku Gumaaday Shacbiga #Somaliland
