*Empty MediaWiki Message*

--- a/Aadan_Yabaal.mw
+++ b/Aadan_Yabaal.mw
@@ -3,4 +3,4 @@
 
 
 {{Degmooyinka Gobolka Shabeellaha Dhexe}}
-aadan yabaal waa degmo ka tirsan degmooyin gobolka sh.dhaxe aadan yabaal waxeey ka mid tahay degmooyinka qadiimiga ah ee ku yaalo shabeelada dhaxe degmadaan waxaa degan qabiilka abgaal cusmaan gaar ahaan owbakar gaabane
+aadan yabaal waa degmo ka tirsan degmooyin gobolka sh.dhaxe aadan yabaal waxeey ka mid tahay degmooyinka qadiimiga ah ee ku yaalo shabeelada dhaxe degmadaan waxaa degan qabiilka abgaal cusmaan gaar ahaan owbakar gaabane degmadu waxy leedahay
