--- a/Cali_Gurey.mw
+++ b/Cali_Gurey.mw
@@ -1,7 +1,6 @@
-{{wargelin|Qoraalka bogan waa mid uqoran si qaab daran. Fadlan naga caawi turjumaada.}}
 {{Infobox person
 | name        = Cali Maxamuud Samantar (Cali Gurey) </br> Ali Mohamud Samanter (Ali Gurey) <br> علي محمود السمنتر
-| image       = [[File:Ali gurey.jpg|thumb|Ali gurey]]
+| image       = [[File:Ali gurey.jpg|thumb|Ali Gorie]]
 | imagesize   = 190px
 | caption     = 
 | birth_date  = 
@@ -12,7 +11,7 @@
 | children    = 
 | title       = Hoggaamiyaha [[Saldanadii Cal Miskaad]]
 }}
-'''Cali Maxamuud Samatar''' oo '''Cali Gurey''' ku magac dheeraa, wuxuu  ahaa Hoggaamiye, Dagaalyahan, Gabyaa, wuxuu ahaa Hoggaamiyihii [[Saldanadii Cal Miskaad]] ee ka talin jirtay Magalaada [[Boosaaso]], buuraleyda [[Cal Miskaad]] iyo deegaano ka mid ah galbeedka gobolka bari. Wuxuu dagaalo la galay Gumaystihii Talyaaniga  dagaaladaas waxaa maqlay [[Sayid Maxamed Cabdulle Xassan]] wuxuuna u diray ergo dhanka Cali Gurey isaga oo doonaayey inuu gacan saar la yeesho, hase yeeshee Cali Gurey wuu diiday arrinkaas. 
+'''Cali Maxamuud Samatar''', oo '''Cali Gurey''', '''Ali Gorie'''; ku magac dheeraa, wuxuu  ahaa Hoggaamiye, Dagaalyahan, Gabyaa, wuxuu ahaa Hoggaamiyihii [[Saldanadii Cal Miskaad]] ee ka talin jirtay Magalaada [[Boosaaso]], buuraleyda [[Cal Miskaad]] iyo deegaano ka mid ah galbeedka gobolka bari. Wuxuu dagaalo la galay Gumaystihii Talyaaniga,  dagaalada Saldanadda iyo Talyaaniga waxaa maqlay [[Sayid Maxamed Cabdulle Xassan]] wuxuuna u diray ergo dhanka Cali Gurey isaga oo doonaayey inuu gacan saar la yeesho, hase yeeshee Cali Gurey wuu diiday arrinkaas. 
 Cali Wuxuu ahaa Halabuurka keliya ee ka gabyay Xarafka (Y) oo lagu tiriyo inuu yahay midka ugu yar, uguna adag Af-soomaaliga ee gabay laga curin karo. Wuxuu ka dhashay qoyska Ugaastooyada Beesha [[Dishiishe]], ee [[Daarood]]ka. Wuxuu ku dhashay Magaalada [[Boosaaso]] ee Woqooyi Bari Soomaaliya.
 
 ==Taariikh==
