--- a/Liiska_Dalalka_Internatka_Xawaaraha.mw
+++ b/Liiska_Dalalka_Internatka_Xawaaraha.mw
@@ -151,7 +151,7 @@
 |-
 | style="text-align: left" | 144 || {{flagcountry|Venezuela}} || {{bartable|1.8||10}}
 |-
-| style="text-align: left" | 144 || {{flagcountry|Somalia}} || {{2.5}
+| style="text-align: left" | 144 || {{flagcountry|Somalia}} || 2.5 Mb/S
 |-
 | style="text-align: left" | 148 || {{flagcountry|Paraguay}} || {{bartable|1.4||10}}
 |}
