*Empty MediaWiki Message*

--- a/Liska_ASEAN_GDP_Dalalka.mw
+++ b/Liska_ASEAN_GDP_Dalalka.mw
@@ -4,8 +4,8 @@ GDP and GDP per capita data are according to [[International Monetary Fund]]'s A
 {| class="sortable wikitable" style="text-align:right;"
 |-
 ! scope="col" rowspan="1" data-sort-type="number" | Rank
-! scope="col" rowspan="1" | Country
-! scope="col" data-sort-type="number" | Population<br/><small>in million<br/><br/></small>
+! scope="col" rowspan="1" | Wadanamad
+! scope="col" data-sort-type="number" | Dadka<br/><small>in million<br/><br/></small>
 ! scope="col" data-sort-type="number" | GDP Nominal<br/><small>millions of<br/>USD</small>
 ! scope="col" data-sort-type="number" | GDP Nominal<br/>per capita<br/><small>USD</small>
 ! scope="col" data-sort-type="number" | GDP (PPP)<br/><small>millions of<br/>USD</small>
