--- a/Taariikhda_Qaramada_Midoobay.mw
+++ b/Taariikhda_Qaramada_Midoobay.mw
@@ -2,7 +2,7 @@
 
 '''Taariikhda [[Qaramada Midoobay]]''' waxay ka soo bilaabantaa [[Dagaalkii Labaad ee Aduunka]]. Wakhtigaas wixii ka dambeeyay xubnaha iyo shaqada ururku wuu balaadhay waxayna maanta gaadhay dhamaan caalamka oo dhan, ayada oo qarniga 21aad noqotey meel kulmisa dhamaan madaxda aduunka.
 
-Sida taariikhda lagu hayo hindisaha iyo magaca ''Qaramada Midoobay'' waxaa horaantii iska lahaa madaxweynihii wadanka [[Maraykanka]] Franklin Roosevelt wakhtigaasi oo uu rabay in lagu magacaabo xulafadii Isbaahaysiga.<ref>http://web.archive.org/web/20060927143158/http://www.wordorigins.org/wordoru.htm#united</ref> Fikradaasi waxaa ku raacay Ra'iisal wasaarihii [[UK|Boqortooyada Biritayn]] kaasi oo socdaal shaqo ku joogay cariga Maraykanka wakhtigaasi 1941. Si kastaba ha ahaatee sanadihii xigay waxaa ereyga Qaramada Midoobay aad u isticmaalayay xulafadii isbaahaysiga ee dagaalka kula jirtey [[Jarmalka|awoodi Nazi-ga]].
+Sida taariikhda lagu hayo hindisaha iyo magaca ''Qaramada Midoobay'' waxaa horaantii iska lahaa madaxweynihii wadanka [[Maraykanka]] Franklin Roosevelt wakhtigaasi oo uu rabay in lagu magacaabo xulafadii Isbaahaysiga.<ref>http://web.archive.org/web/20060927143158/http://www.wordorigins.org/wordoru.htm#united</ref> Fikradaasi waxaa ku raacay Ra'iisal wasaarihii [[UK|Boqortooyada Biritayn]] kaasi oo socdaal shaqo ku joogay cariga Maraykanka wakhtigaasi 1941. Si kastaba ha ahaatee sanadihii xigay waxaa ereyga Qaramada Midoobay aad u isticmaalayay xulafadii isbaahaysiga ee dagaalka kula jirtey [[Jarmalka]].
 
 [[File:UnitedNations.gif|thumb|alt=A black and white motion picture of some men signing papers on a desk in the center of a huge decorated room.|Aasaasitaankii [[Qaramada Midoobay]]]]
 
